--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "exphbs": "^1.2.0",
@@ -15,8 +16,13 @@
     "http-errors": "~1.6.3"
   },
   "devDependencies": {
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
     "dotenv": "^10.0.0",
+    "express-session": "^1.17.2",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   }
 }
