--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dhtmlx-scheduler": "^5.3.13",
     "exphbs": "^1.2.0",
     "express": "~4.16.1",
     "express-handlebars": "^5.3.4",
@@ -17,7 +18,8 @@
     "http-errors": "~1.6.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.11.0"
+    "sequelize": "^6.11.0",
+    "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
     "body-parser": "^1.19.0",
