--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express-handlebars": "^5.3.4",
     "express-handlebars-sections": "^1.0.1",
     "flatpickr": "^4.6.9",
-    "hbs": "~4.0.4",
+    "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
