--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.11.0",
+    "sequelize": "^6.12.2",
     "serve-favicon": "^2.5.0",
     "util": "^0.12.4"
   },
