--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flatpickr": "^4.6.9",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "method-override": "^3.0.0",
     "morgan": "^1.10.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
